--- a/assets/styles/partials/_animations.scss
+++ b/assets/styles/partials/_animations.scss
@@ -18,6 +18,16 @@
 }
 
 /*----------------------------------------------   
+--What Down (for Banner)
+-----------------------------------------------  */
+@include keyframes(what-down) {
+  0%{ opacity: 0; top: -100% }
+  25%{ opacity: 0.5; top: 40% }
+  75%{ opacity: 1; top: 50% }
+  90%{ opacity: 0.5; top: -100% }
+}
+
+/*----------------------------------------------   
 --Slide Down (for Portfolio Projects)
 -----------------------------------------------  */
 @include keyframes(slide-down) {
