--- a/style.css
+++ b/style.css
@@ -1,14 +1,14 @@
 /*
-Theme Name:         Handshaker
-Theme URI:          https://github.com/quilombolaengineering/handshaker.git
-Description:        Handshaker is a WordPress theme built to display art in progress for any aspiring artist. Handshaker showcases art in progress, a digital gallery of previously completed artwork, curatorial submission requests, awards received. There is a section for introducing the artist and the organization (if any) that the artist is associated with. It also features a section for sponsors and (social media) links. It is based on the Sage starter theme. <a href="https://github.com/quilombolaengineering/handshaker.git">Contribute on GitHub</a>.
+Theme Name:         Infectious Content
+Theme URI:          https://github.com/infectiouscontent/infectiouscontent.git
+Description:        Infectious Content is a WordPress theme template for Quilombola Engineering. It is the base theme for designs used on projects for the International Vaccine Institute and other organizations. It is based on the Sage starter theme. <a href="https://github.com/infectiouscontent/infectiouscontent.git">Contribute on GitHub</a>.
 Version:            1.0.0
 Author:             Quilombola Engineering
 Author URI:         http://www.quilombolaengineering.com/
-Text Domain:        handshaker
+Text Domain:        infectious content
 
 License:            MIT License
 License URI:        http://opensource.org/licenses/MIT
 
-Tags: art, art work, artist, artists, art portfolio, art portfolios, digital gallery, online gallery, bootstrap
+Tags: infectious, new media, digital content, international vaccine institute, quilombola engineering
 */
