--- a/assets/styles/partials/_ribbon.scss
+++ b/assets/styles/partials/_ribbon.scss
@@ -22,10 +22,19 @@
 }
 
 .ribbon-text h2 {
-  font-size: 1.1em;
+  font-size: 0.9em;
   font-style: normal;
   text-transform: uppercase;
   line-height: 1.3em;
+  color: $color-light;
+}
+
+.ribbon-text p {
+  font-size: 0.75em;
+  font-style: normal;
+  font-weight: 100;
+  text-transform: uppercase;
+  line-height: 1.5em;
   color: $color-light;
 }
 
