--- a/assets/styles/partials/_banner.scss
+++ b/assets/styles/partials/_banner.scss
@@ -76,7 +76,12 @@
 	}
         .slide {
                 position: absolute;
+		text-align: center;
+		font-family: Lato;
+		font-weight: 100;
+		font-color: $color-light;
                 z-index: 5;
+		h3 { font-weight: 900; }
         }
         .what-up {
                 @include animation(what-up ease-out 9s infinite forwards);
