--- a/assets/styles/partials/_ribbon.scss
+++ b/assets/styles/partials/_ribbon.scss
@@ -24,6 +24,7 @@
 .ribbon-text h2 {
   font-size: 0.9em;
   font-style: normal;
+  font-weight: 900;
   text-transform: uppercase;
   line-height: 1.3em;
   color: $color-light;
