--- a/assets/styles/partials/_animations.scss
+++ b/assets/styles/partials/_animations.scss
@@ -21,20 +21,20 @@
 --What Up (for Banner)
 -----------------------------------------------  */
 @include keyframes(what-up) {
-  0%{ opacity: 0; bottom: -100% }
-  25%{ opacity: 0.5; bottom: 15% }
-  75%{ opacity: 1; bottom: 30% }
-  100%{ opacity: 0; bottom: -100% }
+  0%{ opacity: 0; margin-bottom: -100% }
+  25%{ opacity: 0.5; margin-bottom: 15% }
+  75%{ opacity: 1; margin-bottom: 30% }
+  100%{ opacity: 0; margin-bottom: -100% }
 }
 
 /*----------------------------------------------   
 --What Down (for Banner)
 -----------------------------------------------  */
 @include keyframes(what-down) {
-  0%{ opacity: 0; top: -100% }
-  25%{ opacity: 0.5; top: 15% }
-  75%{ opacity: 1; top: 30% }
-  100%{ opacity: 0; top: -100% }
+  0%{ opacity: 0; margin-top: -100% }
+  25%{ opacity: 0.5; margin-top: 15% }
+  75%{ opacity: 1; margin-top: 30% }
+  100%{ opacity: 0; margin-top: -100% }
 }
 
 /*----------------------------------------------   
