--- a/assets/styles/partials/_banner.scss
+++ b/assets/styles/partials/_banner.scss
@@ -23,11 +23,11 @@
                         font-size: calc(1.75em + 50%);
                         font-color: $color-light;
                 }
-                .what-right {
-                        @include animation(what-right ease-out 9s infinite forwards);
+                .what-up {
+                        @include animation(what-up ease-out 9s infinite forwards);
                 }
-                .what-left {
-                        @include animation(what-left ease-out 9s infinite forwards);
+                .what-down {
+                        @include animation(what-down ease-out 9s infinite forwards);
                 }
 	}
 	p {
