--- a/assets/styles/partials/_banner.scss
+++ b/assets/styles/partials/_banner.scss
@@ -10,38 +10,21 @@
 	.v-center {
 		display: table-cell;
 		vertical-align: middle;
-		position: relative;
 		z-index: 4;
-		padding: 0 5%;
-		h1 {
-			@include animation(fade-in ease-in-out 2s 0.5s both);
-		}
                 .slide {
+			position: relative;
                         text-transform: uppercase;
                         font-family: Lato;
                         font-weight: 100;
                         font-size: calc(1.75em + 50%);
-                        font-color: $color-light;
+                        color: $color-light;
                 }
                 .what-up {
-                        @include animation(what-up ease-out 9s infinite forwards);
+                        @include animation(move-up ease-out 9s infinite forwards);
                 }
                 .what-down {
-                        @include animation(what-down ease-out 9s infinite forwards);
+                        @include animation(move-down ease-out 9s infinite forwards);
                 }
-	}
-	p {
-		font-size: 120%;
-		@include animation(fade-in ease-in-out 2s 1s both);
-	}
-	img {
-		transition: all ease-out 4s;
-		width: 78px;
-		border: 1px solid white;
-		border-radius: 40px;
-	}
-	img:hover {
-		transform: rotate(-90deg);
 	}
  	ul.keyframe-slider {
 		li {
