fallback font-size testing. also increase font weight.

--- a/assets/styles/partials/_banner.scss
+++ b/assets/styles/partials/_banner.scss
@@ -17,6 +17,8 @@
                         font-family: Lato;
                         font-weight: 100;
                         font-size: calc(1.75em + 50%);
+			font-size: 36px;
+			line-height: 44px;
                         color: $color-light;
                 }
                 .what-up {
