fix about header formatting

--- a/assets/styles/partials/_introduction.scss
+++ b/assets/styles/partials/_introduction.scss
@@ -28,7 +28,7 @@ h1 {
 .introduction-title {
 	margin: 0;
 	padding-bottom: 1em;
-	color: $color-dark;
+	h1 { color: $color-dark; }
 }
 
 .introduction-line {
