--- a/assets/styles/partials/_banner.scss
+++ b/assets/styles/partials/_banner.scss
@@ -17,10 +17,12 @@
                         text-transform: uppercase;
                         font-family: Lato;
                         font-weight: 100;
-                        font-size: calc(1.75em + 50%);
 			font-size: 36px;
+                        font-size: calc(1.75em + 50%);
 			line-height: 44px;
+                        line-height: calc(2.00em + 50%);
                         color: $color-light;
+			width: 100%;
                 }
                 .move-up {
 			position: absolute;
