set the width of the slide text to 90%

--- a/assets/styles/partials/_banner.scss
+++ b/assets/styles/partials/_banner.scss
@@ -22,7 +22,7 @@
 			line-height: 44px;
                         line-height: calc(2.00em + 50%);
                         color: $color-light;
-			width: 100%;
+			width: 90vw;
                 }
                 .move-up {
 			position: absolute;
