--- a/assets/styles/partials/_banner.scss
+++ b/assets/styles/partials/_banner.scss
@@ -27,11 +27,11 @@
                 }
                 .move-up {
 			position: absolute;
-                        @include animation(move-up ease-out 9s infinite forwards);
+                        @include animation(move-up ease-out 9s 1s infinite forwards);
                 }
                 .move-down {
 			position: absolute;
-                        @include animation(move-down ease-out 9s infinite forwards);
+                        @include animation(move-down ease-out 9s 1s infinite forwards);
                 }
 	}
  	ul.keyframe-slider {
