--- a/assets/styles/partials/_banner.scss
+++ b/assets/styles/partials/_banner.scss
@@ -24,6 +24,7 @@
                         color: $color-light;
 			width: 90vw;
 			margin-left: -25vw;
+			opacity:0;
                 }
                 .move-up {
 			position: absolute;
