--- a/assets/styles/partials/_banner.scss
+++ b/assets/styles/partials/_banner.scss
@@ -19,8 +19,10 @@
                         font-weight: 100;
 			font-size: 36px;
                         font-size: calc(1.75em + 50%);
+			font-size: 1vw;
 			line-height: 44px;
                         line-height: calc(2.00em + 50%);
+			line-height: 1vh;
                         color: $color-light;
 			width: 90vw;
 			margin-left: -25vw;
