implement round button

--- a/assets/styles/partials/_banner.scss
+++ b/assets/styles/partials/_banner.scss
@@ -19,10 +19,8 @@
                         font-weight: 100;
 			font-size: 36px;
                         font-size: calc(1.75em + 50%);
-			font-size: 3vw;
 			line-height: 44px;
                         line-height: calc(2.00em + 50%);
-			line-height: 1vh;
                         color: $color-light;
 			width: 90vw;
 			margin-left: -30vw;
@@ -64,20 +62,18 @@
 	}
 	.yellow-button {
 		@include animation(fade-in ease-in-out 1s 1s both);
-		display: inline;
-                margin: 1em auto;
                 border: 1px solid $color-dark;
-                border-radius: 1px;
+                border-radius: 50px;
                 background-color: $color-yellow;
                 font-family: Lato;
-		font-style: italic;
-		font-size: 0.5em;
+		font-style: bold;
+		font-size: 25px;
                 text-align: center;
-                line-height: 0.9em;
+                line-height: 50px;
                 color: $color-dark;
                 transition: ease-out 0.5s;
-                width: 6em;
-                height: 3em;
+                width: 100px;
+                height: 100px;
 	}
 	.yellow-button:hover {
                 background-color: white;
