--- a/assets/styles/partials/_banner.scss
+++ b/assets/styles/partials/_banner.scss
@@ -66,10 +66,10 @@
                 border-radius: 50px;
                 background-color: $color-yellow;
                 font-family: Lato;
-		font-style: bold;
-		font-size: 25px;
+		font-weight: 900;
+		font-size: 15px;
                 text-align: center;
-                line-height: 50px;
+                padding-top: 20px;
                 color: $color-dark;
                 transition: ease-out 0.5s;
                 width: 100px;
