--- a/assets/styles/partials/_banner.scss
+++ b/assets/styles/partials/_banner.scss
@@ -27,7 +27,7 @@
 			opacity:0;
                 }
 		@media (max-width: $mq-med) {
-			margin-top: -25%;
+			margin-top: -25vh;
 		}
                 .move-up {
 			position: absolute;
@@ -72,7 +72,7 @@
 		font-weight: 900;
 		font-size: 15px;
                 text-align: center;
-                padding-top: 20px;
+                padding-top: 35px;
                 color: $color-dark;
                 transition: ease-out 0.5s;
                 width: 100px;
