--- a/assets/styles/partials/_banner.scss
+++ b/assets/styles/partials/_banner.scss
@@ -26,7 +26,7 @@
 			margin-left: -30vw;
 			opacity:0;
                 }
-		@media screen and (max-width: $mq-med) {
+		@media (max-width: 400px) {
 			margin-top: -25vh;
 		}
                 .move-up {
