--- a/assets/styles/partials/_banner.scss
+++ b/assets/styles/partials/_banner.scss
@@ -18,9 +18,9 @@
                         font-family: Lato;
                         font-weight: 100;
 			font-size: 36px;
-                        font-size: calc(1.75em + 50%);
+                        font-size: calc(1.25em + 50%);
 			line-height: 44px;
-                        line-height: calc(1.05em + 50%);
+                        line-height: calc(0.55em + 50%);
                         color: $color-light;
 			width: 90vw;
 			margin-left: -30vw;
@@ -29,6 +29,10 @@
                 }
 		@media (min-width: $mq-med) {
 			margin-top: 0;
+			font-size: 36px;
+                        font-size: calc(1.75em + 50%);
+			line-height: 44px;
+                        line-height: calc(1.05em + 50%);
 		}
                 .move-up {
 			position: absolute;
