--- a/assets/styles/partials/_banner.scss
+++ b/assets/styles/partials/_banner.scss
@@ -18,17 +18,17 @@
                         font-family: Lato;
                         font-weight: 100;
 			font-size: 36px;
-                        font-size: calc(1.25em + 50%);
+                        font-size: calc(1.75em + 50%);
 			line-height: 44px;
-                        line-height: calc(0.55em + 50%);
+                        line-height: calc(1.05em + 50%);
                         color: $color-light;
 			width: 90vw;
 			margin-left: -30vw;
-			margin-top: 5vw;
+			margin-top: -25vh;
 			opacity:0;
                 }
 		@media (min-width: $mq-med) {
-			margin-top: 0;
+			margin-top: 10vh;
 		}
                 .move-up {
 			position: absolute;
