--- a/assets/styles/partials/_animations.scss
+++ b/assets/styles/partials/_animations.scss
@@ -21,20 +21,20 @@
 --Move Up (for Slide)
 -----------------------------------------------  */
 @include keyframes(move-up) {
-  0%{ opacity: 0; bottom: -100% }
-  25%{ opacity: 1; bottom: 15% }
-  75%{ opacity: 1; bottom: 15% }
-  100%{ opacity: 0; bottom: -100% }
+  0%{ opacity: 0; margin-top: 200vh }
+  25%{ opacity: 1; margin-top: 0 }
+  75%{ opacity: 1; margin-top: 0 }
+  100%{ opacity: 0; margin-top: 200vh }
 }
 
 /*----------------------------------------------   
 --Move Down (for Slide)
 -----------------------------------------------  */
 @include keyframes(move-down) {
-  0%{ opacity: 0; top: -100% }
-  25%{ opacity: 1; top: 35% }
-  75%{ opacity: 1; top: 35% }
-  100%{ opacity: 0; top: -100% }
+  0%{ opacity: 0; margin-bottom: 200vh }
+  25%{ opacity: 1; margin-bottom: 0 }
+  75%{ opacity: 1; margin-bottom: 0 }
+  100%{ opacity: 0; margin-bottom: 200vh }
 }
 
 /*----------------------------------------------   
