--- a/assets/styles/partials/_banner.scss
+++ b/assets/styles/partials/_banner.scss
@@ -18,14 +18,17 @@
                         font-family: Lato;
                         font-weight: 100;
 			font-size: 36px;
-                        font-size: calc(1.75em + 50%);
+                        font-size: calc(1.25em + 25%);
 			line-height: 44px;
-                        line-height: calc(1.05em + 50%);
+                        line-height: calc(1.75em + 25%);
                         color: $color-light;
 			opacity:0;
                 }
-		@media (max-width: $mq-xsmall) {
-                        font-size: calc(0.75em + 50%);
+		@media (min-width: $mq-xsmall) {
+			font-size: 36px;
+                        font-size: calc(1.75em + 50%);
+			line-height: 44px;
+                        line-height: calc(1.05em + 50%);
 		}
                 .move-up {
 			position: relative;
