--- a/assets/styles/partials/_banner.scss
+++ b/assets/styles/partials/_banner.scss
@@ -72,7 +72,7 @@
                 border: 1px solid $color-dark;
                 border-radius: 50px;
                 background-color: $color-yellow;
-		background-image: linear-gradient(to bottom, #e1ffff 0%,#e1ffff 7%,#e1ffff 12%,#fdffff 12%,#e6f8fd 30%,#c8eefb 54%,#bee4f8 75%,#b1d8f5 100%);
+		background-image: linear-gradient(to bottom, rgba(255,255,255,1) 0%,rgba(255,255,255,0) 100%); 
                 width: 100px;
                 height: 100px;
                 transition: ease-out 0.5s;
