--- a/assets/styles/partials/_banner.scss
+++ b/assets/styles/partials/_banner.scss
@@ -67,11 +67,12 @@
 	}
 	.yellow-button {
 		@include animation(fade-in ease-in-out 1s 1s both);
-		@include radial-gradient($color-yellow, $color-dark);
 		position: relative;
 		display: table;
                 border: 1px solid $color-dark;
                 border-radius: 50px;
+                background-color: $color-yellow;
+		background-image: linear-gradient(180deg,#fff 0,hsla(0,0%,100%,0));
                 width: 100px;
                 height: 100px;
                 transition: ease-out 0.5s;
