--- a/assets/styles/partials/_animations.scss
+++ b/assets/styles/partials/_animations.scss
@@ -21,20 +21,20 @@
 --Move Up (for Slide)
 -----------------------------------------------  */
 @include keyframes(move-up) {
-  0%{ opacity: 0; margin-top: 25vh }
+  0%{ opacity: 0; margin-top: 25vh; z-index: 5 }
   11%{ opacity: 1; margin-top: 0 }
   22%{ opacity: 1; margin-top: 0 }
-  33%{ opacity: 0; margin-top: 25vh }
+  33%{ opacity: 0; margin-top: 25vh; z-index: 1 }
 }
 
 /*----------------------------------------------   
 --Move Down (for Slide)
 -----------------------------------------------  */
 @include keyframes(move-down) {
-  0%{ opacity: 0; margin-bottom: 25vh }
+  0%{ opacity: 0; margin-bottom: 25vh; z-index: 5 }
   11%{ opacity: 1; margin-bottom: 0 }
   22%{ opacity: 1; margin-bottom: 0 }
-  33%{ opacity: 0; margin-bottom: 25vh }
+  33%{ opacity: 0; margin-bottom: 25vh; z-index: 1 }
 }
 
 /*----------------------------------------------   
