--- a/assets/styles/partials/_banner.scss
+++ b/assets/styles/partials/_banner.scss
@@ -23,6 +23,7 @@
                         line-height: calc(1.75em + 25%);
                         color: $color-light;
 			opacity: 0;
+			z-index: 1;
                 }
 		@media (min-width: $mq-small) {
 			font-size: 36px;
