--- a/assets/styles/partials/_animations.scss
+++ b/assets/styles/partials/_animations.scss
@@ -18,6 +18,26 @@
 }
 
 /*----------------------------------------------   
+--Vertical Flip (for Slide)
+-----------------------------------------------  */
+@include keyframes(vflip) {
+  34%{ opacity: 0; margin-top: 25vh; z-index: 5 }
+  45%{ opacity: 1; margin-top: 0 }
+  56%{ opacity: 1; margin-top: 0 }
+  67%{ opacity: 0; margin-top: 25vh; z-index: 1 }
+}
+
+/*----------------------------------------------   
+--Vertical Flop (for Slide)
+-----------------------------------------------  */
+@include keyframes(vflop) {
+  34%{ opacity: 0; margin-bottom: 25vh; z-index: 5 }
+  45%{ opacity: 1; margin-bottom: 0 }
+  56%{ opacity: 1; margin-bottom: 0 }
+  67%{ opacity: 0; margin-bottom: 25vh; z-index: 1 }
+}
+
+/*----------------------------------------------   
 --Move Up (for Slide)
 -----------------------------------------------  */
 @include keyframes(move-up) {
