--- a/assets/styles/partials/_animations.scss
+++ b/assets/styles/partials/_animations.scss
@@ -31,10 +31,10 @@
 --Vertical Flop (for Slide)
 -----------------------------------------------  */
 @include keyframes(vflop) {
-  34%{ opacity: 0; margin-bottom: 25vh; z-index: 5 }
-  45%{ opacity: 1; margin-bottom: 0 }
-  56%{ opacity: 1; margin-bottom: 0 }
-  67%{ opacity: 0; margin-bottom: 25vh; z-index: 1 }
+  34%{ opacity: 0; z-index: 5 }
+  45%{ opacity: 1; rotateX(180deg) }
+  56%{ opacity: 1; rotateX(180deg) }
+  67%{ opacity: 0; z-index: 1 }
 }
 
 /*----------------------------------------------   
