--- a/assets/styles/partials/_banner.scss
+++ b/assets/styles/partials/_banner.scss
@@ -31,13 +31,13 @@
 			line-height: 44px;
                         line-height: calc(1.05em + 25%);
 		}
-                .vflip {
+                .vflop {
 			position: relative;
-                        @include animation(move-up ease-out 27s 2s infinite forwards);
+                        @include animation(vflop ease-out 27s 2s infinite forwards);
                 }
                 .vflop {
 			position: relative;
-                        @include animation(move-down ease-out 27s 2s infinite forwards);
+                        @include animation(vflop ease-out 27s 2s infinite forwards);
                 }
                 .up {
 			position: relative;
