--- a/assets/styles/partials/_animations.scss
+++ b/assets/styles/partials/_animations.scss
@@ -18,6 +18,16 @@
 }
 
 /*----------------------------------------------   
+--Vertical Flop (for Slide)
+-----------------------------------------------  */
+@include keyframes(vflop) {
+  0%{ opacity: 0; }
+  11%{ opacity: 1; }
+  22%{ opacity: 1; }
+  33%{ opacity: 0; }
+}
+
+/*----------------------------------------------   
 --Move Up (for Slide)
 -----------------------------------------------  */
 @include keyframes(move-up) {
