--- a/assets/styles/partials/_animations.scss
+++ b/assets/styles/partials/_animations.scss
@@ -22,8 +22,8 @@
 -----------------------------------------------  */
 @include keyframes(vflop) {
   0%{ opacity: 0; }
-  11%{ opacity: 1; }
-  22%{ opacity: 1; }
+  11%{ opacity: 1; transform: rotateX(180deg) }
+  22%{ opacity: 1; transform: rotateX(180deg) }
   33%{ opacity: 0; }
 }
 
