start with it already rotated

--- a/assets/styles/partials/_banner.scss
+++ b/assets/styles/partials/_banner.scss
@@ -33,6 +33,7 @@
 		}
                 .vflop {
 			position: relative;
+			transform: rotateX(180deg);
                         @include animation(vflop ease-out 27s 2s infinite forwards);
                 }
                 .up {
