--- a/assets/styles/partials/_animations.scss
+++ b/assets/styles/partials/_animations.scss
@@ -21,7 +21,7 @@
 --Vertical Flop (for Slide)
 -----------------------------------------------  */
 @include keyframes(vflop) {
-  0%{ opacity: 0; transform: rotateX(180deg) }
+  0%{ opacity: 0; }
   11%{ opacity: 1; transform: rotateX(180deg) }
   22%{ opacity: 1; transform: rotateX(180deg) }
   33%{ opacity: 0; }
