--- a/assets/styles/partials/_animations.scss
+++ b/assets/styles/partials/_animations.scss
@@ -21,8 +21,8 @@
 --Vertical Flop (for Slide)
 -----------------------------------------------  */
 @include keyframes(vflop) {
-  0%{ opacity: 0; }
-  11%{ opacity: 1; transform: rotateX(180deg) }
+  0%{ opacity: 0; transform: rotateX(360deg) }
+  11%{ opacity: 1; }
   22%{ opacity: 1; transform: rotateX(180deg) }
   33%{ opacity: 0; }
 }
@@ -31,20 +31,20 @@
 --Move Up (for Slide)
 -----------------------------------------------  */
 @include keyframes(move-up) {
-  0%{ opacity: 0; margin-top: 25vh; z-index: 5 }
+  0%{ opacity: 0; margin-top: 25vh }
   11%{ opacity: 1; margin-top: 0 }
   22%{ opacity: 1; margin-top: 0 }
-  33%{ opacity: 0; margin-top: 25vh; z-index: 1 }
+  33%{ opacity: 0; margin-top: 25vh }
 }
 
 /*----------------------------------------------   
 --Move Down (for Slide)
 -----------------------------------------------  */
 @include keyframes(move-down) {
-  0%{ opacity: 0; margin-bottom: 25vh; z-index: 5 }
+  0%{ opacity: 0; margin-bottom: 25vh }
   11%{ opacity: 1; margin-bottom: 0 }
   22%{ opacity: 1; margin-bottom: 0 }
-  33%{ opacity: 0; margin-bottom: 25vh; z-index: 1 }
+  33%{ opacity: 0; margin-bottom: 25vh }
 }
 
 /*----------------------------------------------   
