--- a/assets/styles/partials/_animations.scss
+++ b/assets/styles/partials/_animations.scss
@@ -21,9 +21,9 @@
 --Vertical Flop (for Slide)
 -----------------------------------------------  */
 @include keyframes(vflop) {
-  0%{ opacity: 0; transform: rotateX(90deg) }
-  11%{ opacity: 1; transform: rotateX(90deg) }
-  22%{ opacity: 1; transform: rotateX(90deg) }
+  0%{ opacity: 0; transform: rotateX(180deg) }
+  11%{ opacity: 1; }
+  22%{ opacity: 1; }
   33%{ opacity: 0; }
 }
 
