--- a/assets/styles/partials/_animations.scss
+++ b/assets/styles/partials/_animations.scss
@@ -21,8 +21,8 @@
 --Vertical Flop (for Slide)
 -----------------------------------------------  */
 @include keyframes(vflop) {
-  0%{ opacity: 0; transform: rotateX(180deg) }
-  11%{ opacity: 1; }
+  0%{ opacity: 0; }
+  11%{ opacity: 1; transform: scale(0.10) }
   22%{ opacity: 1; }
   33%{ opacity: 0; }
 }
