--- a/assets/styles/partials/_banner.scss
+++ b/assets/styles/partials/_banner.scss
@@ -35,6 +35,14 @@
 			position: relative;
                         @include animation(vflop ease-out 27s 2s infinite forwards);
                 }
+                .left {
+			position: relative;
+                        @include animation(move-up ease-out 27s 11s infinite forwards);
+                }
+                .right {
+			position: relative;
+                        @include animation(move-down ease-out 27s 11s infinite forwards);
+                }
                 .up {
 			position: relative;
                         @include animation(move-up ease-out 27s 11s infinite forwards);
