--- a/assets/styles/partials/_animations.scss
+++ b/assets/styles/partials/_animations.scss
@@ -31,40 +31,40 @@
 --Move Left (for Slide)
 -----------------------------------------------  */
 @include keyframes(move-left) {
-  0%{ opacity: 0; margin-left: 25vh }
+  0%{ z-index: 5; opacity: 0; margin-left: 25vh }
   11%{ opacity: 1; margin-left: 0 }
   22%{ opacity: 1; margin-left: 0 }
-  33%{ opacity: 0; margin-left: 25vh }
+  33%{ z-index: 4; opacity: 0; margin-left: 25vh }
 }
 
 /*----------------------------------------------   
 --Move Right (for Slide)
 -----------------------------------------------  */
 @include keyframes(move-right) {
-  0%{ opacity: 0; margin-right: 25vh }
+  0%{ z-index: 5; opacity: 0; margin-right: 25vh }
   11%{ opacity: 1; margin-right: 0 }
   22%{ opacity: 1; margin-right: 0 }
-  33%{ opacity: 0; margin-right: 25vh }
+  33%{ z-index: 4; opacity: 0; margin-right: 25vh }
 }
 
 /*----------------------------------------------   
 --Move Up (for Slide)
 -----------------------------------------------  */
 @include keyframes(move-up) {
-  0%{ opacity: 0; margin-top: 25vh }
+  0%{ z-index: 5; opacity: 0; margin-top: 25vh }
   11%{ opacity: 1; margin-top: 0 }
   22%{ opacity: 1; margin-top: 0 }
-  33%{ opacity: 0; margin-top: 25vh }
+  33%{ z-index: 4; opacity: 0; margin-top: 25vh }
 }
 
 /*----------------------------------------------   
 --Move Down (for Slide)
 -----------------------------------------------  */
 @include keyframes(move-down) {
-  0%{ opacity: 0; margin-bottom: 25vh }
+  0%{ z-index: 5; opacity: 0; margin-bottom: 25vh }
   11%{ opacity: 1; margin-bottom: 0 }
   22%{ opacity: 1; margin-bottom: 0 }
-  33%{ opacity: 0; margin-bottom: 25vh }
+  33%{ z-index: 4; opacity: 0; margin-bottom: 25vh }
 }
 
 /*----------------------------------------------   
