using a relative positioning on v-center is resulting in the divs being placed side by side horizontally.

--- a/assets/styles/partials/_banner.scss
+++ b/assets/styles/partials/_banner.scss
@@ -10,7 +10,7 @@
 	@include overlay($color-dark, 0.8);
 	.v-center {
 		display: table-cell;
-		position: relative;
+		position: absolute;
 		vertical-align: middle;
 		z-index: 5;
 		.layer-1 { z-index: 6; }
