--- a/assets/styles/partials/_banner.scss
+++ b/assets/styles/partials/_banner.scss
@@ -1,21 +1,22 @@
 .section-banner {
-	position: relative;
-	display: table;
-	width: 100%;
-	margin: 0 auto;
-	text-align: center;
-	height: 100vh;
-	color: $color-orange-alpha;
-	overflow: hidden;
-	@include overlay($color-dark, 0.8);
+	.layer-1 { position: absolute; z-index: 6; }
+	.layer-2 { position: absolute; z-index: 7; }
+	.layer-3 { position: absolute; z-index: 8; }
+	.banner-frame {
+		position: relative;
+		display: table;
+		width: 100%;
+		margin: 0 auto;
+		text-align: center;
+		height: 100vh;
+		color: $color-orange-alpha;
+		overflow: hidden;
+		@include overlay($color-dark, 0.8);
+	}
 	.v-center {
 		display: table-cell;
-		position: absolute;
+		position: relative;
 		vertical-align: middle;
-		z-index: 5;
-		.layer-1 { z-index: 6; }
-		.layer-2 { z-index: 7; }
-		.layer-3 { z-index: 8; }
                 .slide {
                         text-transform: uppercase;
                         font-family: Lato;
