--- a/assets/styles/partials/_banner.scss
+++ b/assets/styles/partials/_banner.scss
@@ -33,7 +33,7 @@
 			line-height: 44px;
                         line-height: calc(1.05em + 25%);
 		}
-                .vflop {
+                .push {
 			position: relative;
                         @include animation(vflop ease-out 27s 2s infinite forwards);
                 }
