implement stack and layer

--- a/assets/styles/partials/_banner.scss
+++ b/assets/styles/partials/_banner.scss
@@ -8,6 +8,24 @@
 	color: $color-orange-alpha;
 	overflow: hidden;
 	@include overlay($color-dark, 0.8);
+	.stack {
+		position: absolute;
+		.layer-1 {
+			position: relative;
+			display: table;
+			z-index: 1;
+		}
+		.layer-2 {
+			position: relative;
+			display: table;
+			z-index: 2;
+		}
+		.layer-3 {
+			position: relative;
+			display: table;
+			z-index: 3;
+		}
+	}
 	.v-center {
 		display: table-cell;
 		position: relative;
