--- a/assets/styles/partials/_banner.scss
+++ b/assets/styles/partials/_banner.scss
@@ -26,14 +26,10 @@
 			z-index: 3;
 		}
 	}
-	.v-center {
+	.centering {
 		display: table-cell;
 		position: relative;
 		vertical-align: middle;
-		z-index: 5;
-		.layer-1 { z-index: 6; }
-		.layer-2 { z-index: 7; }
-		.layer-3 { z-index: 8; }
                 .slide {
                         text-transform: uppercase;
                         font-family: Lato;
