implement stack at z-index 5

--- a/assets/styles/partials/_banner.scss
+++ b/assets/styles/partials/_banner.scss
@@ -9,6 +9,7 @@
 	overflow: hidden;
 	@include overlay($color-dark, 0.8);
 	.stack {
+		z-index: 5;
 		position: absolute;
 		.layer-1 {
 			position: relative;
