--- a/assets/styles/partials/_banner.scss
+++ b/assets/styles/partials/_banner.scss
@@ -15,17 +15,6 @@
 			position: relative;
 			display: table;
 			z-index: 1;
-		}
-		.layer-2 {
-			position: relative;
-			display: table;
-			z-index: 2;
-		}
-		.layer-3 {
-			position: relative;
-			display: table;
-			z-index: 3;
-		}
 		.centering {
 			display: table-cell;
 			position: relative;
@@ -67,6 +56,101 @@
 				position: relative;
 	                        @include animation(move-down ease-out 27s 20s infinite forwards);
 	                }
+		}
+		}
+		.layer-2 {
+			position: relative;
+			display: table;
+			z-index: 2;
+		.centering {
+			display: table-cell;
+			position: relative;
+			vertical-align: middle;
+	                .slide {
+	                        text-transform: uppercase;
+	                        font-family: Lato;
+	                        font-weight: 100;
+				font-size: 36px;
+	                        font-size: calc(1.25em + 25%);
+				line-height: 44px;
+	                        line-height: calc(1.75em + 25%);
+	                        color: $color-light;
+				opacity: 0;
+	                }
+			@media (min-width: $mq-small) {
+				font-size: 36px;
+	                        font-size: calc(1.75em + 25%);
+				line-height: 44px;
+	                        line-height: calc(1.05em + 25%);
+			}
+	                .push {
+				position: relative;
+	                        @include animation(vflop ease-out 27s 2s infinite forwards);
+	                }
+	                .left {
+				position: relative;
+	                        @include animation(move-left ease-out 27s 11s infinite forwards);
+	                }
+	                .right {
+				position: relative;
+	                        @include animation(move-right ease-out 27s 11s infinite forwards);
+	                }
+	                .up {
+				position: relative;
+	                        @include animation(move-up ease-out 27s 20s infinite forwards);
+	                }
+	                .down {
+				position: relative;
+	                        @include animation(move-down ease-out 27s 20s infinite forwards);
+	                }
+		}
+		}
+		.layer-3 {
+			position: relative;
+			display: table;
+			z-index: 3;
+		.centering {
+			display: table-cell;
+			position: relative;
+			vertical-align: middle;
+	                .slide {
+	                        text-transform: uppercase;
+	                        font-family: Lato;
+	                        font-weight: 100;
+				font-size: 36px;
+	                        font-size: calc(1.25em + 25%);
+				line-height: 44px;
+	                        line-height: calc(1.75em + 25%);
+	                        color: $color-light;
+				opacity: 0;
+	                }
+			@media (min-width: $mq-small) {
+				font-size: 36px;
+	                        font-size: calc(1.75em + 25%);
+				line-height: 44px;
+	                        line-height: calc(1.05em + 25%);
+			}
+	                .push {
+				position: relative;
+	                        @include animation(vflop ease-out 27s 2s infinite forwards);
+	                }
+	                .left {
+				position: relative;
+	                        @include animation(move-left ease-out 27s 11s infinite forwards);
+	                }
+	                .right {
+				position: relative;
+	                        @include animation(move-right ease-out 27s 11s infinite forwards);
+	                }
+	                .up {
+				position: relative;
+	                        @include animation(move-up ease-out 27s 20s infinite forwards);
+	                }
+	                .down {
+				position: relative;
+	                        @include animation(move-down ease-out 27s 20s infinite forwards);
+	                }
+		}
 		}
 	}
  	ul.keyframe-slider {
