--- a/assets/styles/partials/_banner.scss
+++ b/assets/styles/partials/_banner.scss
@@ -12,23 +12,21 @@
 		z-index: 5;
 		position: absolute;
 		.layer-1 {
-			z-index: 1;
 			position: relative;
-			display: table-cell;
-			vertical-align: middle;
+			display: table;
+			z-index: 1;
 		}
 		.layer-2 {
-			z-index: 2;
 			position: relative;
-			display: table-cell;
-			vertical-align: middle;
+			display: table;
+			z-index: 2;
 		}
 		.layer-3 {
-			z-index: 3;
 			position: relative;
-			display: table-cell;
-			vertical-align: middle;
+			display: table;
+			z-index: 3;
 		}
+	}
 	                .slide {
 				display: table-cell;
 				position: relative;
@@ -69,7 +67,6 @@
 				position: relative;
 	                        @include animation(move-down ease-out 27s 20s infinite forwards);
 	                }
-	}
  	ul.keyframe-slider {
 		li {
 			@include bg-abs;
