--- a/assets/styles/partials/_banner.scss
+++ b/assets/styles/partials/_banner.scss
@@ -18,21 +18,15 @@
 	@include overlay($color-dark, 0.8);
 	.stack-1 {
 		z-index: 5;
-		position: relative;
-		display: table-cell;
-		vertical-align: middle;
+		position: absolute;
 	}
 	.stack-2 {
 		z-index: 6;
-		position: relative;
-		display: table-cell;
-		vertical-align: middle;
+		position: absolute;
 	}
 	.stack-3 {
 		z-index: 7;
-		position: relative;
-		display: table-cell;
-		vertical-align: middle;
+		position: absolute;
 	}
 	                .push {
 				position: relative;
