--- a/assets/styles/partials/_banner.scss
+++ b/assets/styles/partials/_banner.scss
@@ -18,12 +18,14 @@
 	.stack-1 {
 		z-index: 5;
 		position: absolute;
-		opacity: 0;
 		height: 100%;
 		width: 100%;
+		opacity: 0;
 		.centering {
 			position: relative;
 			display: table;
+			height: 100%;
+			width: 100%;
 	                .push {
 				position: relative;
 				display: table-cell;
@@ -35,12 +37,14 @@
 	.stack-2 {
 		z-index: 6;
 		position: absolute;
-		opacity: 0;
 		height: 100%;
 		width: 100%;
+		opacity: 0;
 		.centering {
 			position: relative;
 			display: table;
+			height: 100%;
+			width: 100%;
 	                .push {
 				position: relative;
 				display: table-cell;
@@ -52,12 +56,14 @@
 	.stack-3 {
 		z-index: 7;
 		position: absolute;
-		opacity: 0;
 		height: 100%;
 		width: 100%;
+		opacity: 0;
 		.centering {
 			position: relative;
 			display: table;
+			height: 100%;
+			width: 100%;
 	                .push {
 				position: relative;
 				display: table-cell;
