add statement div element

--- a/assets/styles/partials/_banner.scss
+++ b/assets/styles/partials/_banner.scss
@@ -26,11 +26,14 @@
 			display: table;
 			height: 100%;
 			width: 100%;
-	                .push {
+	                .statement {
 				position: relative;
 				display: table-cell;
 				vertical-align: middle;
-	                        @include animation(vflop ease-out 27s 2s infinite forwards);
+	                	.push {
+					position: relative;
+	                        	@include animation(vflop ease-out 27s 2s infinite forwards);
+	                	}
 	                }
 		}
 	}
@@ -72,10 +75,6 @@
 	                }
 		}
 	}
-	                .push {
-				position: relative;
-	                        @include animation(vflop ease-out 27s 2s infinite forwards);
-	                }
 	                .left {
 				position: relative;
 	                        @include animation(move-left ease-out 27s 11s infinite forwards);
