--- a/assets/styles/partials/_animations.scss
+++ b/assets/styles/partials/_animations.scss
@@ -25,6 +25,7 @@
   11%{ opacity: 1; transform: scale(0.10) }
   22%{ opacity: 1; }
   33%{ opacity: 0; }
+  100%{ opacity: 0; }
 }
 
 /*----------------------------------------------   
