--- a/assets/styles/partials/_animations.scss
+++ b/assets/styles/partials/_animations.scss
@@ -36,6 +36,7 @@
   11%{ opacity: 1; margin-left: 0 }
   22%{ opacity: 1; margin-left: 0 }
   33%{ opacity: 0; margin-left: 25vh }
+  100%{ opacity: 0; margin-left: 25vh }
 }
 
 /*----------------------------------------------   
@@ -46,6 +47,7 @@
   11%{ opacity: 1; margin-right: 0 }
   22%{ opacity: 1; margin-right: 0 }
   33%{ opacity: 0; margin-right: 25vh }
+  100%{ opacity: 0; margin-right: 25vh }
 }
 
 /*----------------------------------------------   
@@ -56,6 +58,7 @@
   11%{ opacity: 1; margin-top: 0 }
   22%{ opacity: 1; margin-top: 0 }
   33%{ opacity: 0; margin-top: 25vh }
+  100%{ opacity: 0; margin-top: 25vh }
 }
 
 /*----------------------------------------------   
@@ -66,6 +69,7 @@
   11%{ opacity: 1; margin-bottom: 0 }
   22%{ opacity: 1; margin-bottom: 0 }
   33%{ opacity: 0; margin-bottom: 25vh }
+  100%{ opacity: 0; margin-bottom: 25vh }
 }
 
 /*----------------------------------------------   
