--- a/assets/styles/partials/_animations.scss
+++ b/assets/styles/partials/_animations.scss
@@ -18,12 +18,12 @@
 }
 
 /*----------------------------------------------   
---Vertical Flop (for Slide)
+--Push (for Slide)
 -----------------------------------------------  */
-@include keyframes(vflop) {
+@include keyframes(push) {
   0%{ opacity: 0; }
   11%{ opacity: 1; }
-  22%{ opacity: 1; transform: scale(1.10) }
+  22%{ opacity: 1; transform: scale(1.20) }
   33%{ opacity: 0; }
   100%{ opacity: 0; }
 }
@@ -31,7 +31,7 @@
 /*----------------------------------------------   
 --Move Left (for Slide)
 -----------------------------------------------  */
-@include keyframes(move-left) {
+@include keyframes(left) {
   0%{ opacity: 0; margin-left: 25vh }
   11%{ opacity: 1; margin-left: 0 }
   22%{ opacity: 1; margin-left: 0 }
@@ -42,7 +42,7 @@
 /*----------------------------------------------   
 --Move Right (for Slide)
 -----------------------------------------------  */
-@include keyframes(move-right) {
+@include keyframes(right) {
   0%{ opacity: 0; margin-right: 25vh }
   11%{ opacity: 1; margin-right: 0 }
   22%{ opacity: 1; margin-right: 0 }
@@ -53,7 +53,7 @@
 /*----------------------------------------------   
 --Move Up (for Slide)
 -----------------------------------------------  */
-@include keyframes(move-up) {
+@include keyframes(up) {
   0%{ opacity: 0; margin-top: 25vh }
   11%{ opacity: 1; margin-top: 0 }
   22%{ opacity: 1; margin-top: 0 }
@@ -64,7 +64,7 @@
 /*----------------------------------------------   
 --Move Down (for Slide)
 -----------------------------------------------  */
-@include keyframes(move-down) {
+@include keyframes(down) {
   0%{ opacity: 0; margin-bottom: 25vh }
   11%{ opacity: 1; margin-bottom: 0 }
   22%{ opacity: 1; margin-bottom: 0 }
