set the width of the statement to 80% of the viewport

--- a/assets/styles/partials/_banner.scss
+++ b/assets/styles/partials/_banner.scss
@@ -24,7 +24,7 @@
 			position: relative;
 			display: table;
 			height: 100%;
-			width: 100%;
+			width: 80vw;
 	                .statement {
 				position: relative;
 				display: table-cell;
@@ -46,7 +46,7 @@
 			position: relative;
 			display: table;
 			height: 100%;
-			width: 100%;
+			width: 80vw;
 	                .statement {
 				position: relative;
 				display: table-cell;
@@ -73,7 +73,7 @@
 			position: relative;
 			display: table;
 			height: 100%;
-			width: 100%;
+			width: 80vw;
 	                .statement {
 				position: relative;
 				display: table-cell;
