start switching over to blue

--- a/assets/styles/partials/_banner.scss
+++ b/assets/styles/partials/_banner.scss
@@ -1,3 +1,7 @@
+/*----------------------------------------------
+--Banner
+-----------------------------------------------  */
+
 .section-banner {
 	position: relative;
 	display: table;
