--- a/assets/styles/partials/_ribbon.scss
+++ b/assets/styles/partials/_ribbon.scss
@@ -2,9 +2,9 @@
 --Ribbon
 -----------------------------------------------  */
 
-.orange-ribbon {
+.section-ribbon {
   padding: 2em;
-  background-color: $color-orange;
+  background-color: $color-blue;
   color: $color-light;
   z-index: 1;
 }
