--- a/assets/styles/partials/_config.scss
+++ b/assets/styles/partials/_config.scss
@@ -22,7 +22,8 @@ $color-beta: #7690A4;
 $color-alpha: #98DAEE;
 $color-light: #ffffff;
 $color-dark: #111111;
-$color-grey: #555555;
+$color-dark: #111111;
+$color-blue: #1f3a8c;
 $color-orange: #ff6600;
 $color-yellow: #ffd22d;
 $color-light-alpha: rgba(255,255,255,0.8);
