--- a/assets/styles/partials/_config.scss
+++ b/assets/styles/partials/_config.scss
@@ -22,11 +22,11 @@ $color-beta: #7690A4;
 $color-alpha: #98DAEE;
 $color-light: #ffffff;
 $color-dark: #111111;
-$color-dark: #111111;
 $color-blue: #1f3a8c;
 $color-orange: #ff6600;
 $color-yellow: #ffd22d;
 $color-light-alpha: rgba(255,255,255,0.8);
 $color-dark-alpha: rgba(17,17,17,0.8);
+$color-blue-alpha: rgba(31,58,140,0.8);
 $color-grey-alpha: rgba(59,59,59,0.5);
 $color-orange-alpha: rgba(255,102,0,0.9);
