--- a/assets/styles/partials/_footer.scss
+++ b/assets/styles/partials/_footer.scss
@@ -1,7 +1,11 @@
+/*----------------------------------------------
+--Footer
+-----------------------------------------------  */
+
 .section-footer {
 	position: relative;
 	display: table;
-	border-top: 2px solid $color-orange;
+	border-top: 2px solid $color-blue;
 	width: 100%;
 	margin: 0 auto;
 	padding: 2em 0;
