--- a/assets/styles/partials/_navigation.scss
+++ b/assets/styles/partials/_navigation.scss
@@ -44,7 +44,7 @@
 		font-size: 12px;
 		font-weight: 900;
 	  	line-height: 1.5;
-		width: 30px;
+		width: 30%;
 	}
 	@media only screen and (max-width: 766px) {
 	  	.logo {
