--- a/assets/styles/partials/_navigation.scss
+++ b/assets/styles/partials/_navigation.scss
@@ -44,6 +44,7 @@
 		font-weight: 900;
 	  	line-height: 1.5;
 		width: 20%;
+		max-width: 200px;
 	}
 	@media only screen and (max-width: 766px) {
 	  	.logo {
